review content code and json

--- a/hackspace/src/styles/text.css
+++ b/hackspace/src/styles/text.css
@@ -3,7 +3,7 @@
 /*FONT*/
 /*header*/
 .header {
-  font-family: 'Sedgwick Ave Display', cursive;
+  /*font-family: 'Sedgwick Ave Display', cursive;*/
 }
 /*lateral*/
 .lateralTitle {
