--- a/hackspace/src/styles/pics.css
+++ b/hackspace/src/styles/pics.css
@@ -17,14 +17,13 @@
   position: fixed;
   z-index: 1;
   right: 3vw;
-  bottom: 3vh;
+  bottom: 50px;
   cursor: pointer;
 }
 .goTop img{
   width: 50px;
   height: 50px;
   transition: 0.5s;
-
   opacity: 0;
 }
 .goTop img:hover {
