--- a/hackspace/src/styles/animate.css
+++ b/hackspace/src/styles/animate.css
@@ -57,3 +57,88 @@ pre:active, code:active {
     from { opacity: 0; }
     to   { opacity: 1; }
 }
+
+
+/*HOME CARD EFFECT*/
+
+ /* 
+  background: #444;
+  background-image: linear-gradient(-45deg, #404, #b36);
+  height: 100vh;
+  margin: 0;*/
+
+.vignetteContainer {
+  position:fixed;
+  top: 50%;
+  left: 50%;
+
+  width: 390px;
+  margin-left: -220px;
+
+  height: 525px;
+  margin-top: -300px;
+  
+  perspective: 666px;
+  
+}
+
+.vignette {
+  
+  width: 140px;
+  height: 175px;
+  float: left;
+  
+  padding: 20px;
+  margin: 10px;
+  margin-top: 20px;
+  margin-right: -32px;
+
+  background: #eee;
+  background-image: linear-gradient(110deg, #ddd, #888);
+  opacity: 0.9;
+  backdrop-filter: blur(5px);
+
+  border: double 5px transparent;
+  border-radius: 25px;
+
+  /*Set both inset and outset box shadow using CSS, separated by , */
+  box-shadow: inset -10px -10px 80px 1px rgba(0, 0, 0, 0.3),
+    10px 20px 50px 10px rgba(0, 0, 0, 0.5);
+
+  animation-name: turnAnimation; 
+  animation-duration: 6000ms; 
+  animation-iteration-count: infinite; 
+  transition-timing-function: cubic-bezier(.19,-0.71,.65,1.61); 
+
+}
+
+/* Animation keyframes */
+@keyframes turnAnimation {
+  0% {
+    transform: rotate3d(0, 1, 0, 10deg);
+  }
+  /* Experiment with these numbers at 50% -> */
+  50% {
+    transform: rotate3d(0, 1, -0.2, 45deg);
+  }
+  100% {
+    transform: rotate3d(0, 1, 0, 10deg);
+  }
+}
+
+.lastVignette {
+  background-image: linear-gradient(-70deg, red, white);
+
+  font-size: 1em;
+  text-shadow: 1px 3px 3px rgba(255, 255, 255, 0.7);
+}
+
+.vignette:hover {
+  opacity: 0.7;
+  background-image: linear-gradient(-70deg, #627, #9a9);
+  color: #223;
+}
+
+.lastVignette:hover {
+  background-image: linear-gradient(-70deg, #90c, #5f9);
+}
