--- a/hackspace/src/styles/text.css
+++ b/hackspace/src/styles/text.css
@@ -77,6 +77,12 @@
  color: blue; 
 }
 
+/*MENU*/
+.vignette {
+  text-shadow: 1px 3px 3px rgba(255, 255, 255, 0.7);
+  color: #555;
+}
+
 /*GENERIQUE*/
 
 .contentSpace {
@@ -85,3 +91,4 @@
   cursor: pointer !important;
   padding: 10px;
 }
+
