--- a/hackspace/src/styles/animate.css
+++ b/hackspace/src/styles/animate.css
@@ -58,8 +58,99 @@ pre:active, code:active {
     to   { opacity: 1; }
 }
 
-
 /*HOME CARD EFFECT*/
+.imgbody {
+  width: 100vw;
+  height: 100vh;
+  z-index: -999;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+@import url('https://fonts.googleapis.com/css?family=Exo:700');
+@import url('https://fonts.googleapis.com/css?family=Abel');
+.body {
+  background-color: #dfe6e9;
+  -webkit-transform: perspective(900px);
+  -webkit-transform-style: preserve-3d;
+}
+
+.card1, .card2, .card3 {
+
+  text-align:center;
+  position: absolute;
+  left: 100px;
+  width: 250px;
+  height: 350px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background: linear-gradient(rgb(225,150,58),rgb(227,144,91));
+  transition:.6s;
+  
+  transform: rotatex(75deg) translatey(-200px) translatez(-100px);
+  box-shadow: 0px 20px 60px rgba(0,0,0, 0.5);
+}
+.card1:hover,.card2:hover,.card3:hover{
+  transform: rotatex(0deg);
+  transform: rotatez(0deg);
+  transition:.6s;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
+}
+.card1 img ,.card2 img ,.card3 img {
+  transform: translateY(15px);
+  width:200px;
+  height:120px;
+}
+.vignetteTitle {
+  font-size:25px;
+  font-family: 'Abel', sans-serif;
+  color:rgb(255,255,255);
+  text-shadow: 0 0 2px rgb(255,255,255);
+  transform: translatey(10px);
+}
+
+.vignetteTxt {
+  
+  font-family: 'Abel', sans-serif;
+  color: white;
+  text-align:center;
+  width:220px;
+  transform: translatex(12px);
+}
+.card2 {
+  left: 550px;
+}
+.card3 {
+  left: 1000px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
  /* 
   background: #444;
@@ -67,7 +158,7 @@ pre:active, code:active {
   height: 100vh;
   margin: 0;*/
 
-.vignetteContainer {
+/*.vignetteContainer {
   position:fixed;
   top: 50%;
   left: 50%;
@@ -94,14 +185,13 @@ pre:active, code:active {
   margin-right: -32px;
 
   background: #eee;
-  background-image: linear-gradient(110deg, #ddd, #888);
+  background-image: linear-gradient(110deg, #5f9, #90c);
   opacity: 0.9;
   backdrop-filter: blur(5px);
 
   border: double 5px transparent;
   border-radius: 25px;
 
-  /*Set both inset and outset box shadow using CSS, separated by , */
   box-shadow: inset -10px -10px 80px 1px rgba(0, 0, 0, 0.3),
     10px 20px 50px 10px rgba(0, 0, 0, 0.5);
 
@@ -110,14 +200,14 @@ pre:active, code:active {
   animation-iteration-count: infinite; 
   transition-timing-function: cubic-bezier(.19,-0.71,.65,1.61); 
 
+  color:white;
+
 }
 
-/* Animation keyframes */
 @keyframes turnAnimation {
   0% {
     transform: rotate3d(0, 1, 0, 10deg);
   }
-  /* Experiment with these numbers at 50% -> */
   50% {
     transform: rotate3d(0, 1, -0.2, 45deg);
   }
@@ -141,4 +231,4 @@ pre:active, code:active {
 
 .lastVignette:hover {
   background-image: linear-gradient(-70deg, #90c, #5f9);
-}
+}*/
