--- a/hackspace/src/styles/text.css
+++ b/hackspace/src/styles/text.css
@@ -1,4 +1,8 @@
 /*TEXTE*/
+/*@import url('https://fonts.googleapis.com/css?family=Exo:700');*/
+/*@import url('https://fonts.googleapis.com/css?family=Abel');*/
+  /*font-family: 'Abel', sans-serif;*/
+
 
 /*FONT*/
 /*header*/
