--- a/hackspace/src/styles/App.css
+++ b/hackspace/src/styles/App.css
@@ -5,6 +5,7 @@ html {
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
+  overflow-x: hidden; 
 }
 
 ::-webkit-scrollbar {
@@ -15,7 +16,7 @@ a:visited {
   text-decoration: none;
 }
 
-
+/*//////////////////////////////////////////////////////////////////*/
 /*CODE*/
 pre, code {
   font-family: monospace, monospace;
@@ -71,29 +72,7 @@ select {
   height: 15px;
 }
 
-
-
-
-.lycosContainer {
-  justify-content: center;
-  display: flex;
-  padding-top: 35vh;
-  text-align: center;
-}
-#lycos {
-  border : solid 2px black;
-  border-radius: 3px;
-  width: 50vw;
-  height: 20px !important; 
-}
-
-
-
-
-
-
-
-
+/*//////////////////////////////////////////////////////////////////*/
 
 /*BASIC*/
 .center {
