--- a/hackspace/src/styles/animate.css
+++ b/hackspace/src/styles/animate.css
@@ -1,6 +1,10 @@
+
+/*//////////////////////////////////////////////////////////////////*/
 /*ANIMATION*/
+/*//////////////////////////////////////////////////////////////////*/
 
 /* Ripple effect */
+
 pre {
   background-position: center;
   transition: background 0.8s;
@@ -17,7 +21,7 @@ pre:active {
 pre:active, code:active {
   cursor: copy !important;
 }
-
+/*//////////////////////////////////////////////////////////////////*/
 
 /*FADE IN*/
 
@@ -57,178 +61,66 @@ pre:active, code:active {
     from { opacity: 0; }
     to   { opacity: 1; }
 }
+/*//////////////////////////////////////////////////////////////////*/
 
 /*HOME CARD EFFECT*/
-.imgbody {
-  width: 100vw;
-  height: 100vh;
-  z-index: -999;
-  position: fixed;
-  top: 0;
-  left: 0;
-}
 
-@import url('https://fonts.googleapis.com/css?family=Exo:700');
-@import url('https://fonts.googleapis.com/css?family=Abel');
 .body {
   background-color: #dfe6e9;
   -webkit-transform: perspective(900px);
   -webkit-transform-style: preserve-3d;
 }
 
-.card1, .card2, .card3 {
+.vignette {
 
   text-align:center;
   position: absolute;
-  left: 100px;
+
   width: 250px;
   height: 350px;
-  margin-top: 10px;
+
+  margin-top: 50px;
   margin-bottom: 10px;
+
   background: linear-gradient(rgb(225,150,58),rgb(227,144,91));
-  transition:.6s;
   
+  transition:.6s;
   transform: rotatex(75deg) translatey(-200px) translatez(-100px);
   box-shadow: 0px 20px 60px rgba(0,0,0, 0.5);
 }
-.card1:hover,.card2:hover,.card3:hover{
+
+.vignette0 {
+  left: 100px;
+}
+.vignette1 {
+  left: 550px;
+}
+.vignette2 {
+  left: 1000px;
+}
+
+.vignette1:hover,.vignette2:hover,.vignette0:hover{
   transform: rotatex(0deg);
   transform: rotatez(0deg);
   transition:.6s;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
 }
-.card1 img ,.card2 img ,.card3 img {
+.vignette1 img ,.vignette2 img ,.vignette0 img {
   transform: translateY(15px);
   width:200px;
   height:120px;
 }
 .vignetteTitle {
   font-size:25px;
-  font-family: 'Abel', sans-serif;
   color:rgb(255,255,255);
   text-shadow: 0 0 2px rgb(255,255,255);
   transform: translatey(10px);
 }
 
 .vignetteTxt {
-  
-  font-family: 'Abel', sans-serif;
   color: white;
   text-align:center;
   width:220px;
   transform: translatex(12px);
 }
-.card2 {
-  left: 550px;
-}
-.card3 {
-  left: 1000px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- /* 
-  background: #444;
-  background-image: linear-gradient(-45deg, #404, #b36);
-  height: 100vh;
-  margin: 0;*/
-
-/*.vignetteContainer {
-  position:fixed;
-  top: 50%;
-  left: 50%;
-
-  width: 390px;
-  margin-left: -220px;
-
-  height: 525px;
-  margin-top: -300px;
-  
-  perspective: 666px;
-  
-}
-
-.vignette {
-  
-  width: 140px;
-  height: 175px;
-  float: left;
-  
-  padding: 20px;
-  margin: 10px;
-  margin-top: 20px;
-  margin-right: -32px;
-
-  background: #eee;
-  background-image: linear-gradient(110deg, #5f9, #90c);
-  opacity: 0.9;
-  backdrop-filter: blur(5px);
-
-  border: double 5px transparent;
-  border-radius: 25px;
-
-  box-shadow: inset -10px -10px 80px 1px rgba(0, 0, 0, 0.3),
-    10px 20px 50px 10px rgba(0, 0, 0, 0.5);
-
-  animation-name: turnAnimation; 
-  animation-duration: 6000ms; 
-  animation-iteration-count: infinite; 
-  transition-timing-function: cubic-bezier(.19,-0.71,.65,1.61); 
-
-  color:white;
-
-}
-
-@keyframes turnAnimation {
-  0% {
-    transform: rotate3d(0, 1, 0, 10deg);
-  }
-  50% {
-    transform: rotate3d(0, 1, -0.2, 45deg);
-  }
-  100% {
-    transform: rotate3d(0, 1, 0, 10deg);
-  }
-}
-
-.lastVignette {
-  background-image: linear-gradient(-70deg, red, white);
-
-  font-size: 1em;
-  text-shadow: 1px 3px 3px rgba(255, 255, 255, 0.7);
-}
-
-.vignette:hover {
-  opacity: 0.7;
-  background-image: linear-gradient(-70deg, #627, #9a9);
-  color: #223;
-}
-
-.lastVignette:hover {
-  background-image: linear-gradient(-70deg, #90c, #5f9);
-}*/
+/*//////////////////////////////////////////////////////////////////*/
