--- a/hackspace/src/styles/animate.css
+++ b/hackspace/src/styles/animate.css
@@ -26,10 +26,10 @@ pre:active, code:active {
 /*FADE IN*/
 
 #contents *, .sommaire * {
-    -webkit-animation: fadein 0.7s; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadein 0.7s; /* Firefox < 16 */
+    -webkit-animation: fadein 0.7s; /* Safari, Chrome and Opera  */
+       -moz-animation: fadein 0.7s; /* Firefox  */
         -ms-animation: fadein 0.7s; /* Internet Explorer */
-         -o-animation: fadein 0.7s; /* Opera < 12.1 */
+         -o-animation: fadein 0.7s; /* Opera  */
             animation: fadein 0.7s;
 }
 
@@ -38,13 +38,13 @@ pre:active, code:active {
     to   { opacity: 1; }
 }
 
-/* Firefox < 16 */
+/* Firefox*/
 @-moz-keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
 }
 
-/* Safari, Chrome and Opera > 12.1 */
+/* Safari, Chrome and Opera */
 @-webkit-keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
@@ -56,7 +56,7 @@ pre:active, code:active {
     to   { opacity: 1; }
 }
 
-/* Opera < 12.1 */
+/* Opera */
 @-o-keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
@@ -65,8 +65,14 @@ pre:active, code:active {
 
 /*HOME CARD EFFECT*/
 
-.body {
-  background-color: #dfe6e9;
+.vignetteContainer {
+  height: 0;
+  margin-top: 80px;
+  
+  display: flex;
+  justify-content: space-around;
+  position: relative;
+
   -webkit-transform: perspective(900px);
   -webkit-transform-style: preserve-3d;
 }
@@ -74,29 +80,15 @@ pre:active, code:active {
 .vignette {
 
   text-align:center;
-  position: absolute;
 
-  width: 250px;
-  height: 350px;
-
-  margin-top: 50px;
-  margin-bottom: 10px;
+  width: 300px;
+  height: 450px;
 
   background: linear-gradient(rgb(225,150,58),rgb(227,144,91));
   
   transition:.6s;
   transform: rotatex(75deg) translatey(-200px) translatez(-100px);
   box-shadow: 0px 20px 60px rgba(0,0,0, 0.5);
-}
-
-.vignette0 {
-  left: 100px;
-}
-.vignette1 {
-  left: 550px;
-}
-.vignette2 {
-  left: 1000px;
 }
 
 .vignette1:hover,.vignette2:hover,.vignette0:hover{
@@ -120,7 +112,77 @@ pre:active, code:active {
 .vignetteTxt {
   color: white;
   text-align:center;
-  width:220px;
+  width:260px;
   transform: translatex(12px);
 }
 /*//////////////////////////////////////////////////////////////////*/
+
+/*TEXT TYPING*/
+
+
+.typingCase {
+  width: 100%;
+}
+
+.textTyping {
+  position: absolute; 
+  top: 80vh;
+  left: 50%;
+ 
+  transform: translate(-50%,-50%);
+  -webkit-transform:translate(-50%,-50%);
+}
+
+/*UNDERSCORE CLIGNOTANT*/
+.blinkingCursor {
+  -webkit-animation: 1s blink step-end infinite;
+  -moz-animation: 1s blink step-end infinite;
+  -ms-animation: 1s blink step-end infinite;
+  -o-animation: 1s blink step-end infinite;
+  animation: 1s blink step-end infinite;
+}
+
+@keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: orange;
+  }
+}
+
+@-moz-keyframes blink {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: orange;
+  }
+}
+
+@-webkit-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: orange;
+  }
+}
+
+@-ms-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: orange;
+  }
+}
+
+@-o-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: orange;
+  }
+}
