--- a/hackspace/src/styles/text.css
+++ b/hackspace/src/styles/text.css
@@ -86,6 +86,25 @@
   text-shadow: 1px 3px 3px rgba(255, 255, 255, 0.7);
   color: #555;
 }
+.binary {
+  overflow-x: hidden;
+  position: fixed;
+  bottom:0;
+  max-height: 6px;
+  font-size: 7px;
+
+}
+
+ 
+
+/*TEXT TYPING*/
+
+.textTyping, .blinkingCursor {
+  color: orange;
+  font-size: 3rem;
+  font-family: 'Helvetica',san-serif;
+}
+
 
 /*GENERIQUE*/
 
@@ -96,3 +115,13 @@
   padding: 10px;
 }
 
+.dontouch {
+
+/*Not selected text*/
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; 
+}
