--- a/hackspace/src/styles/animate.css
+++ b/hackspace/src/styles/animate.css
@@ -68,6 +68,7 @@ pre:active, code:active {
 .vignetteContainer {
   height: 0;
   margin-top: 80px;
+  text-align: center;
   
   display: flex;
   justify-content: space-around;
@@ -98,9 +99,9 @@ pre:active, code:active {
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
 }
 .vignette1 img ,.vignette2 img ,.vignette0 img {
-  transform: translateY(15px);
   width:200px;
   height:120px;
+  transform: translateY(15px);
 }
 .vignetteTitle {
   font-size:25px;
@@ -131,6 +132,7 @@ pre:active, code:active {
  
   transform: translate(-50%,-50%);
   -webkit-transform:translate(-50%,-50%);
+  z-index: -2;
 }
 
 /*UNDERSCORE CLIGNOTANT*/
