--- a/hackspace/src/styles/text.css
+++ b/hackspace/src/styles/text.css
@@ -86,13 +86,16 @@
   text-shadow: 1px 3px 3px rgba(255, 255, 255, 0.7);
   color: #555;
 }
+.vignetteTxt {
+  font-size: 12px;
+}
 .binary {
   overflow-x: hidden;
   position: fixed;
   bottom:0;
   max-height: 6px;
-  font-size: 7px;
-
+  font-size: 1px;
+  text-align: center;
 }
 
  
@@ -101,7 +104,7 @@
 
 .textTyping, .blinkingCursor {
   color: orange;
-  font-size: 3rem;
+  font-size: 1.8rem;
   font-family: 'Helvetica',san-serif;
 }
 
