add data code, add build cursor

--- a/hackspace/src/styles/App.css
+++ b/hackspace/src/styles/App.css
@@ -115,6 +115,9 @@ select {
 .cursorDefault {
     cursor: default;
 }
+.cursorInterdit {
+  cursor: not-allowed;
+}
 .invisible {
   display: none;
 }
