--- a/hackspace/src/styles/search.css
+++ b/hackspace/src/styles/search.css
@@ -5,9 +5,9 @@
 	/*overflow: hidden;*/
 	z-index: 2;
 	position: absolute;
-	top: 10vh;
-	right: 10vw;
-	color: orange;
+	top: 210px;
+	right: 5vw;
+	color: black;
 	text-align: start;
 }
 
@@ -36,10 +36,10 @@ input {
   box-sizing: border-box;
   width: 50px;
   height: 50px;
-  border: 4px solid orange;
+  border: 4px solid purple;
   border-radius: 50%;
   background: none;
-  color: orange;
+  color: purple;
   font-size: 24px;
   font-weight: 600;
   font-family: Roboto;
@@ -80,7 +80,7 @@ input {
   position: absolute;
   width: 20px;
   height: 4px;
-  background-color: orange;
+  background-color: purple;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
@@ -104,7 +104,7 @@ input {
   height: 4px;
   margin-top: -1px;
   margin-left: -13px;
-  background-color: orange;
+  background-color: purple;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
@@ -117,7 +117,7 @@ input {
   position: absolute;
   width: 27px;
   height: 4px;
-  background-color: orange;
+  background-color: purple;
   margin-top: -1px;
   margin-left: -13px;
   cursor: pointer;
@@ -129,12 +129,12 @@ input {
 .square {
   box-sizing: border-box;
   padding: 0 40px 0 10px;
-  width: 80vw;
+  width: 90vw;
   height: 50px;
-  border: 4px solid orange;
+  border: 4px solid purple;
   border-radius: 0;
   background: none;
-  color: orange;
+  color: purple;
   font-family: Roboto;
   font-size: 24px;
   font-weight: 600;
