--- a/hackspace/src/styles/search.css
+++ b/hackspace/src/styles/search.css
@@ -36,10 +36,10 @@ input {
   box-sizing: border-box;
   width: 50px;
   height: 50px;
-  border: 4px solid purple;
+  border: 4px solid black;
   border-radius: 50%;
   background: none;
-  color: purple;
+  color: black;
   font-size: 24px;
   font-weight: 600;
   font-family: Roboto;
@@ -80,7 +80,7 @@ input {
   position: absolute;
   width: 20px;
   height: 4px;
-  background-color: purple;
+  background-color: black;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
@@ -104,7 +104,7 @@ input {
   height: 4px;
   margin-top: -1px;
   margin-left: -13px;
-  background-color: purple;
+  background-color: black;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
@@ -117,7 +117,7 @@ input {
   position: absolute;
   width: 27px;
   height: 4px;
-  background-color: purple;
+  background-color: black;
   margin-top: -1px;
   margin-left: -13px;
   cursor: pointer;
@@ -127,14 +127,15 @@ input {
 }
 
 .square {
+
   box-sizing: border-box;
   padding: 0 40px 0 10px;
   width: 90vw;
   height: 50px;
-  border: 4px solid purple;
+  border: 4px solid black;
   border-radius: 0;
-  background: none;
-  color: purple;
+  background: white;
+  color: black;
   font-family: Roboto;
   font-size: 24px;
   font-weight: 600;
